# serializer version: 1
# name: TestFailureSnapshot.test_terminal_failure_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 15548997,
            'description': 'Send your message again. If it keeps happening, share the request id with an admin.',
            'fields': list([
              tuple(
                'Notice',
                list([
                  'The turn ended unexpectedly.',
                  'The conversation and its workspace are kept.',
                  '`rid: 01TESTREQUESTID0000000000`',
                ]),
              ),
              tuple(
                'Details',
                list([
                  'Time: 15s',
                  'Cost: $0.003',
                  'Tokens: 500 in / 80 out',
                ]),
              ),
            ]),
            'footer': 'Atlas',
            'title': 'Something went wrong.',
          }),
        ]),
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
            ]),
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestSuccessSequenceSnapshot.test_thinking_tool_then_done_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
              tuple(
                'Details',
                list([
                  '🖋️ Running a command',
                ]),
              ),
            ]),
            'footer': '11s',
            'title': 'Working on it…',
          }),
        ]),
      }),
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 5763719,
            'description': None,
            'fields': list([
              tuple(
                'Details',
                list([
                  'Time: 11s',
                  'Cost: $0.008',
                  'Tokens: 1.5k in / 320 out',
                ]),
              ),
            ]),
            'footer': 'Atlas',
            'title': None,
          }),
        ]),
      }),
      dict({
        'content': 'Here is the answer.',
        'embeds': None,
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
            ]),
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
